--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>Mesto</title>
 </head>
 <body class="page">
-
+  <header class="header"></header>
+  <section class="section"></section>
+  <footer class="footer"></footer>
 </body>
 </html>
