--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <title>Mesto</title>
 </head>
 <body class="page">
-  <header class="header"></header>
+  <header class="header">
+    <img src="./images/logo.svg" alt="Логотип">
+  </header>
   <section class="section"></section>
   <footer class="footer"></footer>
 </body>
