--- a/index.html
+++ b/index.html
@@ -9,9 +9,134 @@
 </head>
 <body class="page">
   <header class="header">
-    <img src="./images/logo.svg" alt="Логотип">
+    <img class="logo" src="./images/logo.svg" alt="Логотип">
   </header>
-  <section class="section"></section>
-  <footer class="footer"></footer>
+  <main class="main">
+    <section class="profile">
+      <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватар">
+      <ul class="profile__list">
+        <li>
+          <h1 class="profile__info">
+            Жак-Ив Кусто
+          </h1>
+        </li>
+        <li>
+          <button class="edit-button" >
+            <img src="./images/Vector.svg" alt="Кнопка редактировать">
+          </button>
+        </li>
+        <li>
+          <p class="profile__text">
+            Исследователь океана
+          </p>
+        </li>
+      </ul>
+      <button class="add-button">
+        <img src="./images/plus.svg" alt="Кнопка плюс">
+      </button>
+    </section>
+    <section class="elements">
+      <ul class="cards">
+        <li class="cards__card">
+          <img class="cards__foto" src="./images/foto_4.jpg" alt="Вид на горы через деревья">
+          <ul class="cards__list">
+            <li>
+              <p class="cards__text">
+                Карачаево-Ч...
+              </p>
+            </li>
+            <li>
+            <img class="cards__like" src="./images/heart.svg" alt="Сердце для лайка">
+            </li>
+          </ul>
+        </li>
+        <li class="cards__card">
+          <img class="cards__foto" src="./images/foto_2.jpg" alt="Старая постройка">
+          <ul class="cards__list">
+            <li>
+              <p class="cards__text">
+                Гора Эльбрус
+              </p>
+            </li>
+            <li>
+          <img class="cards__like" src="./images/heart.svg" alt="Сердце для лайка">
+            </li>
+          </ul>
+        </li>
+        <li class="cards__card">
+          <img class="cards__foto" src="./images/foto_3.jpg" alt="Закат среди гор">
+          <ul class="cards__list">
+            <li>
+              <p class="cards__text">
+                Домбай
+              </p>
+            </li>
+            <li>
+              <img class="cards__like" src="./images/heart.svg" alt="Сердце для лайка">
+            </li>
+          </ul>
+        </li>
+        <li class="cards__card">
+          <img class="cards__foto" src="./images/foto_4.jpg" alt="Вид на горы через деревья">
+          <ul class="cards__list">
+            <li>
+              <p class="cards__text">
+                Домбай
+              </p>
+            </li>
+            <li>
+              <img class="cards__like" src="./images/heart.svg" alt="Сердце для лайка">
+            </li>
+          </ul>
+        </li>
+        <li class="cards__card">
+          <img class="cards__foto" src="./images/foto_3.jpg" alt="Закат среди гор">
+          <ul class="cards__list">
+            <li>
+              <p class="cards__text">
+                Домбай
+              </p>
+            </li>
+            <li>
+              <img class="cards__like" src="./images/heart.svg" alt="Сердце для лайка">
+            </li>
+          </ul>
+        </li>
+        <li class="cards__card">
+          <img class="cards__foto" src="./images/foto_2.jpg" alt="Старая постройка">
+          <ul class="cards__list">
+            <li>
+              <p class="cards__text">
+                Домбай
+              </p>
+            </li>
+            <li>
+                <img class="cards__like" src="./images/heart.svg" alt="Сердце для лайка">
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer class="footer">
+    <p class="footer__text">
+      &copy; 2020 Mesto Russia
+    </p>
+  </footer>
+  <form action="#" class="pop-up">
+    <!-- Помогите с заданием уже не сколько дней сижу и не получается сверствать макет ! У меня уже горят нервы от то что ничего не получется  -->
+    <a class="pop-up__close" href="#" target="_self">
+      <img class="pop-up__close-img" src="./images/CloseIcon.svg" alt="Крестик закрытия">
+    </a>
+    <p class="pop-up__title">
+      Редактировать профиль
+    </p>
+    <input class="pop-up__name" />
+    <input class="pop-up__text" />
+    <button type="submit" class="pop-up__button">
+      Сохранить
+    </button>
+  </form>
+  <script src="./script/main.js"></script>
 </body>
 </html>
