--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </p>
         </li>
       </ul>
-      <button class="add-button">
+      <button class="addButton">
         <img src="./images/plus.svg" alt="Кнопка плюс">
       </button>
     </section>
