--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
     <p class="pop-up__title">
       Редактировать профиль
     </p>
-    <input class="pop-up__name" />
-    <input class="pop-up__text" />
+    <input class="pop-up__name" type="text"/>
+    <input class="pop-up__text" type="text"/>
     <button type="submit" class="pop-up__button">
       Сохранить
     </button>
