--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <div class="pop-up">
     <div class="pop-up__container">
        <!-- подскажите как сделать адаптивным этот крестик  -->
-      <a href="#" class="pop-up__close">
+      <a href="#" class="pop-up__close" target="_self">
         <img class="pop-up__close-img" src="./images/CloseIcon.svg" alt="Крестик закрытия">
       </a>
       <h2 class="pop-up__title">
