--- a/index.html
+++ b/index.html
@@ -14,24 +14,22 @@
   <main class="main">
     <section class="profile">
       <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватар">
-      <ul class="profile__list">
-        <li>
+      <div class="profile__list">
           <h1 class="profile__info">
             Жак-Ив Кусто
           </h1>
-        </li>
-        <li>
-          <button class="edit-button" >
-            <img src="./images/Vector.svg" alt="Кнопка редактировать">
-          </button>
-        </li>
-        <li>
-          <p class="profile__text">
-            Исследователь океана
-          </p>
-        </li>
-      </ul>
-      <button class="addButton">
+          <div>
+            <button class="profile__edit-button" type="button" aria-label="btn-edit">
+              <img src="./images/Vector.svg" alt="Кнопка редактировать">
+            </button>
+          </div>
+          <div>
+            <p class="profile__text">
+              Исследователь океана
+            </p>
+          </div>
+      </div>
+      <button class="profile__add-Button" type="button" aria-label="btn-add">
         <img src="./images/plus.svg" alt="Кнопка плюс">
       </button>
     </section>
@@ -39,81 +37,57 @@
       <ul class="cards">
         <li class="cards__card">
           <img class="cards__foto" src="./images/foto_4.jpg" alt="Вид на горы через деревья">
-          <ul class="cards__list">
-            <li>
-              <p class="cards__text">
+          <div class="cards__list">
+              <h2 class="cards__text">
                 Карачаево-Ч...
-              </p>
-            </li>
-            <li>
-            <img class="cards__like" src="./images/heart.svg" alt="Сердце для лайка">
-            </li>
-          </ul>
+              </h2>
+              <button class="cards__like" type="button" aria-label="btn-like"></button>
+          </div>
         </li>
         <li class="cards__card">
           <img class="cards__foto" src="./images/foto_2.jpg" alt="Старая постройка">
-          <ul class="cards__list">
-            <li>
-              <p class="cards__text">
+          <div class="cards__list">
+              <h2 class="cards__text">
                 Гора Эльбрус
-              </p>
-            </li>
-            <li>
-          <img class="cards__like" src="./images/heart.svg" alt="Сердце для лайка">
-            </li>
-          </ul>
+              </h2>
+              <button class="cards__like" type="button" aria-label="btn-like"></button>
+          </div>
         </li>
         <li class="cards__card">
           <img class="cards__foto" src="./images/foto_3.jpg" alt="Закат среди гор">
-          <ul class="cards__list">
-            <li>
-              <p class="cards__text">
+          <div class="cards__list">
+              <h2 class="cards__text">
                 Домбай
-              </p>
-            </li>
-            <li>
-              <img class="cards__like" src="./images/heart.svg" alt="Сердце для лайка">
-            </li>
-          </ul>
+              </h2>
+              <button class="cards__like" type="button" aria-label="btn-like"></button>
+          </div>
         </li>
         <li class="cards__card">
           <img class="cards__foto" src="./images/foto_4.jpg" alt="Вид на горы через деревья">
-          <ul class="cards__list">
-            <li>
-              <p class="cards__text">
+          <div class="cards__list">
+              <h2 class="cards__text">
                 Домбай
-              </p>
-            </li>
-            <li>
-              <img class="cards__like" src="./images/heart.svg" alt="Сердце для лайка">
-            </li>
-          </ul>
+              </h2>
+              <button class="cards__like" type="button" aria-label="btn-like"></button>
+          </div>
         </li>
         <li class="cards__card">
           <img class="cards__foto" src="./images/foto_3.jpg" alt="Закат среди гор">
-          <ul class="cards__list">
-            <li>
-              <p class="cards__text">
+          <div class="cards__list">
+              <h2 class="cards__text">
                 Домбай
-              </p>
-            </li>
-            <li>
-              <img class="cards__like" src="./images/heart.svg" alt="Сердце для лайка">
-            </li>
-          </ul>
+              </h2>
+              <button class="cards__like" type="button" aria-label="btn-like"></button>
+          </div>
         </li>
         <li class="cards__card">
           <img class="cards__foto" src="./images/foto_2.jpg" alt="Старая постройка">
-          <ul class="cards__list">
-            <li>
-              <p class="cards__text">
+          <div class="cards__list">
+              <h2 class="cards__text">
                 Домбай
-              </p>
-            </li>
-            <li>
-                <img class="cards__like" src="./images/heart.svg" alt="Сердце для лайка">
-            </li>
-          </ul>
+              </h2>
+              <button class="cards__like" type="button" aria-label="btn-like"></button>
+          </div>
         </li>
       </ul>
     </section>
@@ -125,16 +99,13 @@
   </footer>
   <div class="pop-up">
     <div class="pop-up__container">
-       <!-- подскажите как сделать адаптивным этот крестик  -->
-      <a href="#" class="pop-up__close" target="_self">
-        <img class="pop-up__close-img" src="./images/CloseIcon.svg" alt="Крестик закрытия">
-      </a>
+      <button class="pop-up__btn-close" type="button" aria-label="Close"></button>
       <h2 class="pop-up__title">
         Редактировать профиль
       </h2>
-      <form class="pop-up__form" action="#">
-        <input type="text" class="pop-up__name" value="Жак-Ив Кусто"/>
-        <input type="text" class="pop-up__text" value="Исследователь океана"/>
+      <form class="pop-up__form" action="#" name="popup-form">
+        <input id='nameInput' type="text" class="pop-up__text" name="content" value=""/>
+        <input id='jobInput' type="text" class="pop-up__text" name="content" value=""/>
         <button class="pop-up__btn-save" type="submit">
           Сохранить
         </button>
