--- a/index.html
+++ b/index.html
@@ -15,18 +15,14 @@
     <section class="profile">
       <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватар">
       <div class="profile__list">
-          <h1 class="profile__info">
-            Жак-Ив Кусто
-          </h1>
+          <h1 class="profile__info">Жак-Ив Кусто</h1>
           <div>
             <button class="profile__edit-button" type="button" aria-label="btn-edit">
               <img src="./images/Vector.svg" alt="Кнопка редактировать">
             </button>
           </div>
           <div>
-            <p class="profile__text">
-              Исследователь океана
-            </p>
+            <p class="profile__text">Исследователь океана</p>
           </div>
       </div>
       <button class="profile__add-Button" type="button" aria-label="btn-add">
