--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="pop-up-foto__container">
       <button class="pop-up-foto__btn-close" type="button" aria-label="Close"></button>
       <figure class="pop-up-foto__block">
-        <img class="pop-up-foto__img" src="" alt="Вид на горы через деревья">
+        <img class="pop-up-foto__img" src="./images/foto_4.jpg" alt="Вид на горы через деревья">
         <figcaption class="pop-up-foto__text">
           Карачаево-Ч...
         </figcaption>
