--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
   <div class="pop-up-supplement-foto">
     <div class="pop-up-supplement-foto__container">
       <button class="pop-up-supplement-foto__btn-close" type="button" aria-label="Close"></button>
-      <h2 class="pop-up__title">
+      <h2 class="pop-up-supplement-foto__title">
         Новое место
       </h2>
       <form class="pop-up-supplement-foto__form" action="#" name="popup-form">
-        <input id='NameFoto' type="text" class="pop-up__text" name="content-name-foto" value="" placeholder='Название'/>
-        <input id='linkFoto' type="text" class="pop-up__text" name="content-foto" value="" placeholder='Ссылка на картинку'/>
+        <input id='NameFoto' type="text" class="pop-up-supplement-foto__text" name="content-name-foto" value="" placeholder='Название'/>
+        <input id='linkFoto' type="text" class="pop-up-supplement-foto__text" name="content-foto" value="" placeholder='Ссылка на картинку'/>
         <button class="pop-up-supplement-foto__btn-create" type="submit">
           Создать
         </button>
