--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
   </div>
   <div id="pop-up-foto" class="pop-up">
-    <div class="pop-up__container">
+    <div class="pop-up__foto-container">
       <button id="pop-up-foto__btn-close" class="pop-up__btn-close" type="button" aria-label="Close"></button>
       <figure class="pop-up__block-figure">
         <img class="pop-up__img" src="./images/foto_4.jpg" alt="Вид на горы через деревья">
