--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       &copy; 2020 Mesto Russia
     </p>
   </footer>
-  <div class="pop-up">
+  <div id='profile-popup' class="pop-up">
     <div class="pop-up__container pop-up__container_background">
       <button class="pop-up__btn-close" type="button" aria-label="Close"></button>
       <h2 class="pop-up__title">
