refact-popup-esc

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       &copy; 2020 Mesto Russia
     </p>
   </footer>
-  <div id='profile-popup' class="pop-up">
+  <div id='profile-popup' class="pop-up" tabindex="0">
     <div class="pop-up__container pop-up__container_background">
       <button class="pop-up__btn-close" type="button" aria-label="Close"></button>
       <h2 class="pop-up__title">
@@ -55,7 +55,7 @@
       </form>
     </div>
   </div>
-  <div id="pop-up-supplement-foto" class="pop-up">
+  <div id="pop-up-supplement-foto" class="pop-up" tabindex="0">
     <div class="pop-up__container pop-up__container_background">
       <button id="pop-up-supplement-foto__btn-close" class="pop-up__btn-close" type="button" aria-label="Close"></button>
       <h2 class="pop-up__title">
@@ -72,7 +72,7 @@
       </form>
     </div>
   </div>
-  <div id="pop-up-foto" class="pop-up">
+  <div id="pop-up-foto" class="pop-up" tabindex="0">
     <div class="pop-up__foto-container">
       <button id="pop-up-foto__btn-close" class="pop-up__btn-close" type="button" aria-label="Close"></button>
       <figure class="pop-up__block-figure">
