--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
       <h2 class="pop-up__title">
         Вы уверены?
       </h2>
-      <form id="pop-up-supplement-foto__form" class="pop-up__form" action="#" name="popup-form" novalidate>
+      <form id="pop-upDeleteFoto" class="pop-up__form" action="#" name="popup-form" novalidate>
         <button class="pop-up__btn-save pop-up__btn-save_size" type="submit" >
           Да
         </button>
@@ -103,7 +103,7 @@
       <h2 class="pop-up__title">
         Обновить аватар
       </h2>
-      <form id="pop-up-supplement-foto__form" class="pop-up__form" action="#" name="popup-form" novalidate>
+      <form id="pop-upUpgredAvatar" class="pop-up__form" action="#" name="popup-form" novalidate>
         <input id='linkFotoAvatar' type="url" class="pop-up__text" name="contentFotoAvatar" value="" placeholder='Ссылка на картинку' required/>
         <button class="pop-up__btn-save" type="submit" >
           Да
