--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,9 @@
   </header>
   <main class="main">
     <section class="profile">
-      <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Аватар">
-      <!-- <div class="profile__avatar-hover"></div> -->
+      <div class="profile__avatar-hover">
+        <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Аватар">
+      </div>
       <div class="profile__list">
           <h1 class="profile__info">Жак-Ив Кусто</h1>
           <div>
@@ -105,6 +106,7 @@
       </h2>
       <form id="pop-upUpgredAvatar" class="pop-up__form" action="#" name="popup-form" novalidate>
         <input id='linkFotoAvatar' type="url" class="pop-up__text" name="contentFotoAvatar" value="" placeholder='Ссылка на картинку' required/>
+        <span id="linkFoto-error" class="pop-up__span-error"></span>
         <button class="pop-up__btn-save" type="submit" >
           Да
         </button>
