--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,7 @@
       </h2>
       <form id="pop-upUpgredAvatar" class="pop-up__form" action="#" name="popup-form" novalidate>
         <input id='linkFotoAvatar' type="url" class="pop-up__text" name="contentFotoAvatar" value="" placeholder='Ссылка на картинку' required/>
-        <span id="linkFoto-error" class="pop-up__span-error"></span>
+        <span id="linkAvatar" class="pop-up__span-error"></span>
         <button class="pop-up__btn-save" type="submit" >
           Да
         </button>
